--- a/styles/style.css
+++ b/styles/style.css
@@ -10,9 +10,13 @@
 }
 
 .header {
+align-items: center;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color:  #f2f2f2;
+  display: flex;
+  position: relative;
   /* выше установили ограничения для секции */
 }
 
@@ -28,4 +32,240 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.logo_place_header {
+  position: absolute;
+  width: 300px;
+  height: 32px;
+ top: 30px;
+ left: 64px;
+}
+
+.title {
+  display: flex;
+  position: relative;
+  align-items: center;
+  left: 64px;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+}
+
+.subtitle {
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  line-height:25px ;
+  font-size: 18px;
+  font-weight: normal;
+  
+}
+
+.header__maim-illustration {
+ position: absolute;
+ right: 0px;
+ width: 765px;
+ height: 608px;
+ bottom: 0;
+ right: 0;
+ 
+}
+
+.header__square-pic {
+  position: absolute;
+  overflow: hidden;
+  width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  right: 0px;
+  top: 64px;
+  
+}
+
+.content {
+  margin-top: 100px;
+}
+
+.description {
+ display: flex;
+justify-content: space-between;
+list-style-type: none;
+width: 80%;
+margin: auto;
+}
+
+.two-columns {
+  list-style-type: none;
+}
+
+.two-columns__brief {
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  width: 175px;
+  padding: 10px;
+  margin: 0;
+}
+.two-columns__paragraph{
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+span {
+  line-height: 32px;
+   font-size: 24px;
+   font-weight: 600;
+}
+
+.two-columns__span-accent {
+   line-height: 32px;
+   font-size: 24px;
+}
+
+.digits {
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  display:flex;
+  flex-direction: column;
+  list-style: none;
+ 
+  
+}
+
+.section-title {
+ width: 60%;
+ line-height: 1.15;
+ font-size: 60px;
+ font-weight: 600;
+ text-align: center;
+ margin: auto;
+ 
+ 
+}
+
+.section-subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin:auto;
+  
+
+}
+
+.table {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+ list-style: none;
+ width: 1100px;
+ margin: 0 auto;
+ padding: 0 ;
+
+
+}
+
+.table-cell {
+  width: 250px;
+  margin-top: 60px;
+  
+}
+
+.table-heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0;
+  
+}
+
+.table-text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+ 
+ margin-top: 20px;
+margin-bottom: 0;
+
+}
+
+.feynman {
+ 
+margin-top: 100px;
+}
+
+.feynman-title {
+  width: 648px;
+ line-height: 1.15;
+ font-size: 120px;
+ font-weight: 600;
+margin: auto;  
+text-align: center;
+}
+
+.feynman-subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: auto;  
+  text-align: center;
+  margin-top: 70px;
+}
+
+.feynman-link {
+line-height: 51px;
+font-size: 36px;
+font-weight: normal;
+position: absolute;
+text-decoration: none;
+color:#2f80ed;
+
+
+}
+
+.feynman-img {
+width: 867px;
+height: 637px;
+}
+
+.kaufman {
+margin-top: 90px;
+list-style-type: none;
+background-color:  #1f1f1f;
+}
+.section__title_them_dark {
+ 
+color: #fff;
+}
+
+.section__subtitle_theme_dark {
+
+  color: #fff;
+}
+
+.table_theme_dark {
+ 
+  color: #fff;
+}
+
+.table__cell_theme_dark {
+  color: #fff;
+  width: 200px;
+}
+
+.table__heading_theme_dark {
+  color: #fff;
+}
+
+.table__text_theme_dark {
+  color: #fff;
 }
